[package]
name = "image2tiles"
version = "0.1.0"
edition = "2021"
authors = ["Franck Barbenoire <contact@franck-barbenoire.fr>"]
description = "Generate tiles from an image"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["cargo"] }
image = "0.24.8"
thiserror = "1.0.56"
