[package]
name = "image2multires"
version = "0.1.0"
edition = "2021"
authors = ["Franck Barbenoire <contact@franck-barbenoire.fr>"]
description = "Generate multires tiles from an image"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/franckinux/image2multires-rs"
keywords = ["cli", "image"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["cargo"] }
image = "0.24.8"
thiserror = "1.0.56"
